# ornstein_uhlenbeck

./: .gitignore  README.md  _quarto.yml  index.qmd  main.py  pyproject.toml
_freeze/notebooks/ou_theory/execute-results/: html.json
_freeze/notebooks/ou_validation/execute-results/: html.json
docs/: index.html
docs/notebooks/: ou_theory.html  ou_validation.html
notebooks/: ou_theory.html  ou_theory.qmd  ou_validation.qmd
scripts/: run_simulation.py
src/ornstein_uhlenbeck/: ou.py
